--- a/index.html
+++ b/index.html
@@ -3,9 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Startseite</title>
 </head>
+
 <body>
+
+    <header class="header">
+        <a href="index.html"><img src="Bilder/OH_SalzPfeffer.png" alt="Schriftzug von Salz und Pfeffer"></a>
+    </header>
+
+    <nav class="nav-bar">
+        <ul class="nav-links">
+            <li><a href="rezepte.html">Rezepte</a></li>
+            <li><a href="tipps.html">Tipp&Tricks</a></li>
+            <li><a href="ueber-uns.html">Über Uns</a></li>
+        </ul>      
+    </nav>
+
+
+    <main class="inhalt">
+        <section class="einleitung">
+            <h1>Willkommen bei Salz&Pfeffer</h1>
+            <p>
+                Kochen ist mehr als nur Nahrungszubereitung - es ist Kreativität, Genuss und ein Stück Lebensfreude. Hier findest du Rezepte, die den 
+                Alltag leichter machen und besondere Momente noch schöner. Von schnellen Gerichten für die Woche über raffinierte Ideen für Gäste bis 
+                hin zu süßen Leckereien ist für jeden Geschmack etwas dabei. Unsere Rezepte sind so geschrieben, dass sie leicht verständlich sind und 
+                auch Anfängern gelingen. Dabei legen wir Wert auf frische Zutaten, klare Anleitungen und Inspiration für deine eigene Küche. Ob herzhaft 
+                oder süß, traditionell oder modern - hier kannst du stöbern, Neues entdecken und Altbekanntes neu interpretieren. Mach es dir gemütlich, 
+                schnappe dir Kochlöffel und Pfanne -und lass dich von unserer Sammlung inspirieren. Viel Spaß beim Ausprobieren und guten Appetit!
+            </p>
+        </section>
+        <section class="rezepte-vorschau">
+            <h2>Lieblingsrezepte</h2>
+            <p>Hier eine Auswahl unserer liebsten Rezepte</p>
+
+            <div class="vorschau">
+                <div class="vorschau-bild">
+                    <img src="Bilder/Klöße.jpg" alt="Gebackene Klöße">
+                </div>
+                <div class="vorschau-text">
+                    <p>Klöße sind eine traditionelle Beilage der deutschen Küche und bestehen meist aus Kartoffeln, Grieß oder Brot. Sie sind besonders 
+                        beliebt zu deftigen Fleischgerichten mit Sauce, da sie den Geschmack perfekt aufnehmen.</p>
+                </div>
+
+            <div class="vorschau">
+                <div class="vorschau-bild">
+                    <img src="Bilder/Curry.jpg" alt="Thailändisches rotes Curry">
+                </div>
+                <div class="vorschau-text">
+                    <p>Thai Curry ist bekannt für seine cremige Kokosmilch-Basis und die aromatische Kombination aus Currypaste, frischem Gemüse und 
+                        Kräutern. Es gibt verschiedene Varianten wie rotes, grünes oder gelbes Curry, die sich vor allem in Schärfegrad und 
+                        Gewürzmischung unterscheiden.</p>
+                </div>                
+
+            </div>
+        </section>
+    </main>
+
+
+    <footer class="footer-bar">
+        <div class="footer-content">
+            <span>Salz&Pfeffer GmbH</span>
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="impressum.html">Impressum</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+
+    </footer>
     
 </body>
 </html>
